<resources>
    <string name="app_name">sevenbeats</string>

    <string name="hello_world">Hello world!</string>
    <string name="menu_cancion">Canciones</string>
    <string name="menu_album">Álbumes</string>
    <string name="menu_artistas">Artistas</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_song_edit">SongEdit</string>
    <string name="title_activity_see_song">SeeSong</string>
    <string name="title_activity_see_album">SeeAlbum</string>
    <string name="action_search">Busqueda</string>
    <string name="action_anyadir">Anyadir</string>
    <string name="action_desplegar">Desplegar</string>


    <string name="edit_titulo">Título:</string>
    <string name="edit_album">Álbum:</string>
    <string name="edit_genero">Género:</string>
    <string name="edit_duracion">Duración:</string>
    <string name="edit_guardar">Guardar</string>
    <string name="boton_caratula">Cambiar Carátula</string>
    <string name="boton_artista">Cambiar Imagen</string>
    <string name="artista">Artista:</string>

    <string name="drawer_open">Abierto</string>
    <string name="drawer_close">cerrado</string>
    <string name="search_hint">Buscando</string>
    <string name="title_activity_see_Artist">Artista</string>

</resources>
