<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sevenbits.sevenbeats.SeeAlbum"
    android:background="#d1d1d1">

    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <ImageView
        android:id="@+id/SeeAlbum_Imagen_Album"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/default_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/fakeView"
        android:layout_margin="15dp"
        android:adjustViewBounds="true"/>


    <!-- Entrada para editar-->
    <TextView android:text="@string/edit_album" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:layout_toRightOf="@+id/SeeAlbum_Imagen_Album"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/SeeAlbum_Imagen_Album"
        android:layout_marginTop="10dp" />

    <TextView android:id="@+id/SeeAlbum_texto_nombreAlbum" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView5"
        android:layout_alignBottom="@+id/textView5" />


    <!-- Entrada para artista-->


    <TextView android:text="@string/artista" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/SeeAlbum_Imagen_Album"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView5"
        android:layout_alignRight="@+id/textView5"
        android:layout_marginTop="10dp"
        android:gravity="right" />

    <TextView android:id="@+id/SeeAlbum_texto_artistaAlbum" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/textView4"
        android:layout_alignBottom="@+id/textView4" />


    <!-- Entrada para genero -->

    <TextView android:text="@string/edit_genero" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:id="@+id/textView3"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView5"
        android:layout_below="@+id/textView4"/>
    <TextView android:id="@+id/SeeAlbum_texto_generoAlbum" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView3"
        android:layout_toRightOf="@+id/textView3" />

    <!-- Boton -->

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/SeeAlbum_boton_confirmar"
        android:layout_height="30dp"
        android:text="@string/boton_caratula"
        android:layout_alignParentTop="false"
        android:layout_toRightOf="@+id/SeeAlbum_Imagen_Album"
        style="@style/ButtonText"
        android:layout_marginLeft="10dp"
        android:layout_alignParentBottom="false"
        android:layout_alignBottom="@+id/SeeAlbum_Imagen_Album" />


    <!-- Lista -->

    <ListView
        android:id="@+id/SeeAlbum_lista_canciones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SeeAlbum_Imagen_Album"
        android:layout_marginTop="5dp">

    </ListView>


</RelativeLayout>
