<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sevenbits.sevenbeats.SongEdit">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_titulo"
        android:id="@+id/textView"
        android:layout_alignRight="@+id/textView4"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_album"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/textView4"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_genero"
        android:id="@+id/textView3"
        android:layout_below="@+id/textView2"
        android:layout_alignRight="@+id/textView4"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/edit_duracion"
        android:id="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Artista: "
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Ruta: "
        android:id="@+id/textView6"
        android:layout_below="@+id/textView5"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView3" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SongEdit_texto_titulo"
        android:layout_toRightOf="@+id/textView" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SongEdit_texto_album"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/textView2"
        android:layout_below="@+id/textView" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SongEdit_texto_genero"
        android:layout_margin="5dp"
        android:layout_toRightOf="@+id/textView3"
        android:layout_below="@+id/textView2" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SongEdit_texto_duracion"
        android:layout_margin="5dp"
        android:ems="10"
        android:layout_below="@+id/textView3"
        android:layout_toRightOf="@+id/textView4"
        android:inputType="time" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SongEdit_texto_artista"
        android:layout_margin="5dp"
        android:ems="10"
        android:layout_below="@+id/textView4"
        android:layout_toRightOf="@+id/textView5" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/SongEdit_texto_ruta"
        android:layout_margin="5dp"
        android:ems="10"
        android:layout_below="@+id/textView5"
        android:layout_toRightOf="@+id/textView6"
        android:inputType="time" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_guardar"
        android:id="@+id/SongEdit_boton_guardar"
        android:layout_alignParentBottom="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentEnd="false"
        style="@style/ButtonText"
        android:layout_margin="5dp"
        android:layout_below="@+id/SongEdit_texto_ruta"
        android:layout_alignRight="@+id/SongEdit_texto_ruta" />


</RelativeLayout>
