<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="sevenbits.sevenbeats.SeeSong">

    <View android:id="@+id/fakeView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <RatingBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeeSong_rating_ratingBar"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textView9" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentStart="false"
        android:layout_centerInParent="true"
        android:layout_alignParentRight="false"
        android:maxHeight="200dp"
        android:maxWidth="200dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_titulo"
        android:id="@+id/textView6"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView8"
        android:layout_below="@+id/imageButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artista"
        android:id="@+id/textView7"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_duracion"
        android:id="@+id/textView8"
        android:layout_below="@+id/textView7"
        android:layout_toRightOf="@+id/fakeView"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_genero"
        android:id="@+id/textView9"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView8"
        android:layout_alignRight="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeeSong_texto_titulo"
        android:layout_toRightOf="@+id/textView6"
        android:layout_alignBottom="@+id/textView6"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeeSong_texto_artista"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView7"
        android:layout_alignBottom="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeeSong_texto_duracion"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView8"
        android:layout_alignBottom="@+id/textView8" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/SeeSong_texto_genero"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/textView9"
        android:layout_alignBottom="@+id/textView9" />

</RelativeLayout>
